# Code_era

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  app.json  docker-compose.yml  market_predictor.py  package-lock.json  package.json  pyproject.toml  readme.md  render.yaml  requirements.txt  test_market_predictor.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: __init__.py  main.py
app/api/: dependencies.py
app/api/endpoints/: chatbot.py  market.py  wallet.py
app/api/v1/: router.py
app/collectors/: binance_stream.py  binance_ws.py  finbert_pipeline.py  market_collector.py  tradingview_sync.py
app/config/: settings.py
app/core/: exceptions.py  logging.py  security.py
app/db/: neo4j_client.py
app/db/neo4j/: connection.py
app/db/postgres/: connection.py  redis_client.py
app/graph/: graph_service.py
app/middleware/: auth_middleware.py  exception_handler.py
app/ml_services/: financial_health_scorer.py  finbert_service.py  market_predictor.py  recommendation_engine.py  risk_engine.py  technical_indicators.py
app/models/: request_specs.py  response_specs.py
app/models/neo4j/: graph_models.py
app/models/postgres/: __init__.py  base.py  financial.py  market.py  user.py
app/rag/: chatbot.py
app/repositories/: base.py  financial_repository.py  market_repository.py  user_repository.py
app/schemas/: financial.py  market.py  user.py
app/services/: auth_service.py  debt_arbitrage.py  financial_service.py  notification_service.py  risk_allocator.py  side_hustle.py  user_service.py
app/utils/: cache_keys.py  financial_math.py  pagination.py
app/workers/: celery_app.py  market_tasks.py  ml_tasks.py  notification_tasks.py
docker/: Dockerfile  Dockerfile.beat  Dockerfile.worker  nginx.conf  prometheus.yml
docs/: ARCHITECTURE.md
scripts/: init_db.sql  seed_data.py
src/app/: _layout.tsx  index.tsx  profile.tsx
src/app/(auth)/: login.tsx  register.tsx  splash.tsx
src/app/(onboarding)/: complete.tsx  expenses.tsx  income.tsx  loans.tsx  wallets.tsx
src/app/(tabs)/: _layout.tsx  chat.tsx  index.tsx  markets.tsx  portfolio.tsx  tradex.tsx
src/components/: ChatBubble.tsx  MetricCard.tsx  NewsCard.tsx  OnboardingShell.tsx  OpportunityCard.tsx  SentimentBar.tsx  TabIcon.tsx  TopBar.tsx
src/constants/: config.ts  theme.ts
src/data/: seed.ts
src/engines/: behavioralEngine.ts  debtArbitrage.ts  riskAllocator.ts  sentimentMomentum.ts
src/hooks/: useColors.ts
src/services/: auth.ts  binance.ts  chat.ts  market.ts  newsdata.ts  openrouter.ts  sentiment.ts  tradex.ts  wallet.ts
src/store/: useFinanceStore.ts
src/types/: index.ts
src/utils/: mockCandles.ts
tests/: conftest.py
tests/api/: test_auth.py  test_financial.py
tests/integration/: test_financial_service.py
tests/unit/: test_financial_math.py  test_health_scorer.py  test_recommendation_engine.py  test_risk_engine.py  test_security.py  test_settings.py  test_technical_indicators.py
(+21 files in other folders)
