[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "finai-platform"
version = "1.0.0"
description = "AI-powered Financial Intelligence & Wellness Platform"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "FinAI Team" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ─── Black ────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
    \.git | \.venv | __pycache__ | alembic/versions
)/
'''

# ─── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # bandit (security)
    "ANN", # annotations
]
ignore = [
    "ANN101", "ANN102",  # self/cls type hints
    "ANN401",            # Dynamically typed expressions (Any)
    "S101",              # Use of assert (fine in tests)
    "S603", "S607",      # subprocess (needed for management tasks)
    "B008",              # Dependency injection in default args (FastAPI pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S"]
"alembic/*" = ["ANN", "N"]
"scripts/*" = ["ANN", "S"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false
lines-after-imports = 2

# ─── MyPy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
no_strict_optional = true
warn_unused_imports = true
warn_redundant_casts = true
check_untyped_defs = true
exclude = ["alembic/", "tests/"]

# ─── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: pure unit tests (no I/O)",
    "integration: tests requiring real DB",
    "api: API endpoint tests",
    "slow: tests taking > 5 seconds",
]
filterwarnings = [
    "ignore::DeprecationWarning:sqlalchemy",
    "ignore::DeprecationWarning:aiohttp",
]

# ─── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = [
    "*/migrations/*", "*/alembic/*",
    "*/tests/*", "*/conftest*",
    "app/utils/__init__.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
skip_covered = false
